# ICOlyzer

./: .gitignore  MANIFEST.in  README.md  justfile  pyproject.toml
.github/workflows/: documentation.yaml  publish.yaml  tests.yaml
Releases/: Release.md
Test/: cutter.t
doc/releases/: 1.10.0.md  1.10.1.md  1.10.2.md  1.9.0.md
doc/sphinx/: conf.py  development.md  index.md  install.md  remove.md  requirements.md  tools.md
icolyzer/: analyzer.py  cli.py  cutter.py
