[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "Clemens Burgstaller", email = "burgstaller@ift.at"},
    {name = "Norbert Leder", email = "norbert.leder@mytoolit.com"},
    {name = "René Schwaiger", email = "rene.schwaiger@ift.at"},
    {name = "Thomas Hirschbüchler", email = "hirschbuechler@ift.at"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
]
dependencies = [
  "matplotlib>=3.5.1",
  "numpy>=1.20",
  "pandas>=1.3.5",
  "tables>=3.10.1,<4",
  "openpyxl",
  "rich>=13.4.1",
]
description = """Auxiliary set of tools to work with measurement data produced \
                 by the ICOtronic system"""
keywords = [
    "smart-tool",
    "smh",
    "stu",
    "sth",
    "tool-holder",
]
name = "icolyzer"
readme = "README.md"
requires-python = ">=3.12"
version = "1.10.1"

[project.optional-dependencies]
dev = [
    "Flake8-pyproject>=1.2.3",
    "mypy",
    "myst-parser>=5",
    "pylint>=3.0.2",
    "sphinx>=9.1.0,<10",
    "sphinx-pyproject>=0.3",
    "sphinx_rtd_theme",
    "toml",
]
test = [
    "prysk[pytest-plugin]>=0.13.1",
    "pytest",
]

[project.scripts]
icoanalyzer = "icolyzer.analyzer:main"
icoconverter = "icolyzer.converter:main"
icoplotter = "icolyzer.plotter:main"
icocutter = "icolyzer.cutter:main"

[project.urls]
Source = "https://github.com/ift-tuwien/ICOlyzer/"

[tool.black]
line-length = 79
preview = true
unstable = true
enable-unstable-feature = ["string_processing"]

[tool.flake8]
ignore = [
  # Whitespace before colon
  "E203",
  # Module level import not at top of file
  "E402",
  # Line break before binary operator
  "W503",
  # Line break after binary operator
  "W504"
]
per-file-ignores = "__init__.py:F401,conf.py:F821"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
ignore-paths = [ ".venv/.*$" ]

[tool.pytest.ini_options]
# Use doctests
# Fail after first errors
# Ignore macOS metadata files
addopts = "--doctest-modules -x --ignore-glob='*._*.py'"
minversion = "6.0"
